# SQL-Engine

./: .da_cursor_worldstate.json  .gitignore  COMPETITIVE_BENCHMARK_REPORT.md  Cargo.toml  EDGE_CASES_ANALYSIS.md  EDGE_CASES_FIX_SUMMARY.md  ENGINE_STATUS_REPORT.md  FIXES_PROGRESS.md  FIX_RUST_ENV.sh  GENERALIZATION_ANALYSIS.md  GENERALIZATION_RECOMMENDATIONS.md  KNOWN_ISSUES_ANALYSIS.md  MISSING_FEATURES.md  OPTIMIZATION_PLAN.md  PERFORMANCE_METADATA_PLAN.md  QUICK_INSTALL.sh  SQL_FEATURES_CHECKLIST.md  THE_PRD.md  benchmark_all_features.txt  benchmark_queries.txt  benchmark_results.txt  clear_all_cache.sh  competitive_benchmark.py  load_all_tables.sh  run.sh  run_benchmark_demo.py  run_complete_test.sh  run_query.sh  run_tests.sh  start.sh  start_postgres.sh  test_all_features.rs  test_complete_pipeline.sh  test_comprehensive.rs  test_data.csv  test_dtype_fix.rs  test_metadata_storage.rs  test_order_by_fix.rs  test_package.sh  test_query_output.rs  (+5 more)
.cargo/: config.toml
.query_patterns/: patterns.jsonl
benches/: bitmap_bench.rs  join_bench.rs  phase1_simd_bench.rs  query_bench.rs
benchmarks/: PROTOCOL.md  run_benchmarks.sh
docs/execution/: join_engine.md
examples/: basic_usage.rs
scripts/: audit_unwrap.sh
simd_test/: Cargo.toml  test_simd.rs
src/: engine.rs  error.rs  lib.rs  main.rs  result_format.rs
src/cache/: mod.rs  operator_cache.rs  path_cache.rs  result_cache.rs  worldstate_cache.rs
src/codegen/: mod.rs  wasm_codegen.rs
src/config/: legacy.rs  mod.rs  production.rs
src/distributed/: coordinator.rs  mod.rs  partitioner.rs  sharding.rs
src/engine/: hardware_tuning.rs
src/execution/: .!49429!engine.rs  adaptive.rs  adaptive_hooks.rs  batch.rs  bitset_join.rs  bitset_simd.rs  bloom_filter.rs  column_identity.rs  cte_scan.rs  derived_table_scan.rs  dictionary_execution.rs  distributed.rs  engine.rs  exec_node.rs  fused_scan.rs  hash_table.rs  having.rs  lockfree_transaction.rs  memory_optimized.rs  memory_pool.rs  mod.rs  monitoring.rs  operator_contracts.rs  operators.rs  panic_boundary.rs  parallel_executor.rs  pipeline.rs  prebuild_joins.rs  radix_join.rs  result.rs  robustness.rs  session.rs  shared_execution.rs  simd_avx2.rs  simd_kernels.rs  subquery_executor.rs  transaction.rs  type_conversion.rs  wal.rs  wasm_runner.rs  (+2 more)
src/hypergraph/: coarsening.rs  compression.rs  edge.rs  graph.rs  mod.rs  node.rs  path.rs
src/incremental/: delta.rs  differential.rs  mod.rs  propagator.rs  version.rs
src/index/: composite.rs  enhanced_integration.rs  mod.rs
src/ingestion/: connector.rs  join_inference.rs  join_validator.rs  json_connector.rs  lineage.rs  mod.rs  orchestrator.rs  schema_inference.rs  simulator.rs  table_builder.rs
src/learning/: mod.rs  optimization_hints.rs  pattern_embedder.rs  pattern_extractor.rs  pattern_learner.rs  pattern_vector_db.rs
src/llm/: audit_log.rs  intent_compiler.rs  intent_spec.rs  intent_spec_generator.rs  mod.rs  ollama_client.rs  plan_generator.rs  plan_normalizer.rs  sql_generator.rs  validators.rs
src/metadata/: column_id.rs  mod.rs  schema.rs
src/query/: adaptive_optimizer.rs  aqe_reopt.rs  ast_to_expression.rs  auto_index.rs  auto_partition.rs  auto_recluster.rs  auto_storage.rs  bitset_cost_model.rs  bitset_planner.rs  cache.rs  caching_advanced.rs  cascades_optimizer.rs  cluster_maintainer.rs  column_resolver.rs  continuous_learning.rs  cte.rs  ddl.rs  dml.rs  expression.rs  filter_opt.rs  fingerprint.rs  functions.rs  fusion.rs  hypersampling.rs  index_builder.rs  index_selection.rs  join_elimination.rs  join_graph.rs  join_heuristics.rs  join_order.rs  learned_ce.rs  memo.rs  ml_training.rs  mod.rs  online_ce.rs  optimization_advanced.rs  optimizer.rs  parser.rs  parser_enhanced.rs  partition_applier.rs  (+21 more)
src/spill/: advanced_strategies.rs  agg_spill.rs  format.rs  manager.rs  mod.rs  parallel_merge.rs  partitioned_join_spill.rs  predictive_controller.rs  predictive_model.rs  prefetcher.rs  run_builder.rs  sort_spill.rs
src/storage/: adaptive_fragment.rs  auto_compression.rs  bitmap_index.rs  bitset.rs  bitset_hierarchy.rs  bitset_v3.rs  btree_index.rs  cache_layout.rs  columnar.rs  compressed_execution.rs  compression.rs  dictionary.rs  factorized.rs  fragment.rs  hnsw_graph.rs  hnsw_optimized.rs  index.rs  learned_index.rs  memory_tier.rs  mod.rs  partitioning.rs  range_bitmap_index.rs  simd_impl.rs  statistics.rs  tiered_index.rs  tiered_optimization.rs  vector_index.rs  vector_search_optimized.rs
src/web/: api.rs  benchmark.rs  csv_loader.rs  mod.rs  server.rs  streaming.rs
src/worldstate/: cost_model.rs  keys.rs  lineage.rs  metadata_pack.rs  mod.rs  persistence.rs  policies.rs  rules.rs  schema.rs  stats.rs  stats_collector.rs
static/: index.html
static/assets/: cssMode-Bidy30e3.js  cssMode-D3teEj59.js  editor.main-Bfz-aSAC.js  editor.main-CNAUY3zs.js  freemarker2-CEQbFZHU.js  freemarker2-TRVIhpdS.js  handlebars-Don60Dd7.js  handlebars-TGGm7TMW.js  html-C5OIedp0.js  html-DBXSx2DO.js  htmlMode-BWZu0ZAT.js  htmlMode-BZ6QEoiJ.js  index-BBA0T565.js  index-o6dqZU5_.js  index-pqDtE0Uy.css  javascript-Bw_nQidC.js  javascript-GpRTM3oh.js  jsonMode-C0_La4q1.js  jsonMode-Cr-iJvQ-.js  liquid-B-LJ0xqw.js  liquid-CA-uQf4c.js  mdx--LVBI3IK.js  mdx-ii9xuN9Q.js  python-ClN6vAPp.js  python-CoRHpOPY.js  razor-B4fQDdMd.js  razor-tmVHrHkq.js  tsMode-C-yHyFPa.js  tsMode-CQXaZZgM.js  typescript-BGsUtMrO.js  (+5 more)
test_external_usage/: Cargo.toml
tests/: advanced_spill_test.rs  batch1_integration.rs  bitmap_join_tests.rs  bitset_integration_test.rs  comprehensive_features_test.rs  comprehensive_join_tests.rs  cutting_edge_features.rs  integration_test.rs  join_refactoring_tests.rs  learned_index_test.rs  memory_bounded_test_suite.rs  memory_efficient_test.rs  micro_kernel_test.rs  multiple_joins_test.rs  regression_suite.rs  simd_vectorized_test.rs  sparse_index_test.rs  spill_test.rs  standalone_bitset_test.rs  wasm_jit_test.rs  window_functions.rs
ui/: KEYBOARD_SHORTCUTS.md  README.md  START_UI.md  check-status.sh  index.html  package-lock.json  package.json  setup.sh  start-dev.sh  vite.config.ts
(+70 files in other folders)
