 [package]
name = "hypergraph-sql-engine"
version = "0.1.0"
edition = "2021"

[dependencies]
# SQL Parsing
sqlparser = "0.40"

# Columnar Data & Arrow (for efficient columnar operations)
arrow = { version = "57", features = [] }
parquet = "57"  # Used for result export in execution/result.rs

# SIMD Operations
# Note: portable-simd requires nightly, using manual SIMD intrinsics instead
# For stable Rust, we use manual SIMD via std::arch or fallback to scalar

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
bincode = "1"

# Concurrency & Parallelism
crossbeam = "0.8"
dashmap = "5"
rayon = "1.8"

# Compression
zstd = "0.13"
lz4 = "1.24"

# Utilities
ahash = "0.8"  # Fast hashing
bitvec = "1"   # Bitmap operations
fxhash = "0.2" # Fast hash functions
ordered-float = "2" # Ordered floats for sorting
regex = "1"    # Pattern matching for LIKE operator
rand = "0.8"   # Random number generation for HNSW level assignment

# Error Handling
anyhow = "1"
thiserror = "1"

# Async runtime (needed for PostgreSQL and DuckDB)
tokio = { version = "1", features = ["full"] }

# Web framework for admin UI
axum = "0.7"
tower = "0.4"
tower-http = { version = "0.5", features = ["fs", "cors"] }

# CSV Parsing
csv = "1.3"

# PostgreSQL
postgres = "0.19"
tokio-postgres = "0.7"

# DuckDB (high-performance analytical database)
duckdb = { version = "1.0", features = ["bundled"] }

# Logging (used in query planner)
tracing = "0.1"

# Memory Management
memmap2 = "0.9"  # Memory-mapped files for zero-copy fragment access

[dev-dependencies]
criterion = "0.5"

[[bin]]
name = "compare_engines"
path = "src/bin/compare_engines.rs"

[[bin]]
name = "web_admin"
path = "src/bin/web_admin.rs"

[[bin]]
name = "sql_repl"
path = "src/bin/sql_repl.rs"

[[bin]]
name = "benchmark"
path = "src/bin/benchmark.rs"

[[bin]]
name = "verify_features"
path = "verify_features.rs"

[[bin]]
name = "test_join_minimal"
path = "test_join_minimal.rs"

[[bin]]
name = "test_join_simple"
path = "test_join_simple.rs"

[[bin]]
name = "test_join_demo"
path = "test_join_demo.rs"

[[bin]]
name = "test_multi_join"
path = "test_multi_join.rs"

[[bin]]
name = "test_complex_query"
path = "test_complex_query.rs"

[[bin]]
name = "test_complex_queries_suite"
path = "test_complex_queries_suite.rs"

# Temporarily disabled - uses old APIs
# [[bin]]
# name = "test_query4"
# path = "test_query4.rs"

# [[bin]]
# name = "test_query4_standalone"
# path = "test_query4_standalone.rs"

