 [package]
name = "hypergraph-sql-engine"
version = "0.1.0"
edition = "2021"

[dependencies]
# HTTP client for Ollama
reqwest = { version = "0.11", features = ["json"] }
# SQL Parsing
sqlparser = "0.40"

# Columnar Data & Arrow (for efficient columnar operations)
arrow = { version = "57", features = [] }
parquet = "57"  # Used for result export in execution/result.rs

# SIMD Operations
# Note: portable-simd requires nightly, using manual SIMD intrinsics instead
# For stable Rust, we use manual SIMD via std::arch or fallback to scalar

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
bincode = "1"

# Concurrency & Parallelism
crossbeam = "0.8"
dashmap = "5"
rayon = "1.8"

# Compression
zstd = "0.13"
lz4 = "1.24"

# Utilities
ahash = "0.8"  # Fast hashing
bitvec = "1"   # Bitmap operations
fxhash = "0.2" # Fast hash functions
ordered-float = "2" # Ordered floats for sorting
regex = "1"    # Pattern matching for LIKE operator
rand = "0.8"   # Random number generation for HNSW level assignment
itertools = "0.12" # Iterator utilities
dirs = "5.0"   # Directory utilities for finding user data dir
uuid = { version = "1.0", features = ["v4"] } # UUID generation for spill files
num_cpus = "1.16" # CPU count detection for predictive spill
tempfile = "3.8" # Temporary directory for tests

# Error Handling
anyhow = "1"
thiserror = "1"
toml = "0.8"

# Async Runtime
async-trait = "0.1"

# WASM JIT Compilation
wasmtime = "23.0"

# Async runtime (needed for PostgreSQL and DuckDB)
tokio = { version = "1", features = ["full"] }
tokio-stream = "0.1"
bytes = "1.5"

# Web framework for admin UI
axum = "0.7"
tower = "0.4"
tower-http = { version = "0.5", features = ["fs", "cors"] }

# CSV Parsing
csv = "1.3"

# PostgreSQL
postgres = "0.19"
tokio-postgres = "0.7"

# DuckDB (high-performance analytical database)
duckdb = { version = "1.0", features = ["bundled"] }

# Logging (used in query planner)
tracing = "0.1"

# Memory Management
memmap2 = "0.9"  # Memory-mapped files for zero-copy fragment access

[dev-dependencies]
criterion = "0.5"

[[bin]]
name = "compare_engines"
path = "src/bin/compare_engines.rs"

[[bin]]
name = "test_features"
path = "src/bin/test_features.rs"

[[bin]]
name = "web_admin"
path = "src/bin/web_admin.rs"

[[bin]]
name = "sql_repl"
path = "src/bin/sql_repl.rs"

[[bin]]
name = "benchmark"
path = "src/bin/benchmark.rs"

[[bin]]
name = "tpc_benchmark"
path = "src/bin/tpc_benchmark.rs"

[[bin]]
name = "benchmark_speed_validation"
path = "src/bin/benchmark_speed_validation.rs"

[[bin]]
name = "test_simd_direct"
path = "src/bin/test_simd_direct.rs"

[[bin]]
name = "phase4_integration_test"
path = "src/bin/phase4_integration_test.rs"

[[bin]]
name = "phase4_production_benchmark"
path = "src/bin/phase4_production_benchmark.rs"

[[bin]]
name = "phase4_test_data_generator"
path = "src/bin/phase4_test_data_generator.rs"

[[bin]]
name = "phase6_bitset_v3_benchmark"
path = "src/bin/phase6_bitset_v3_benchmark.rs"

[[bin]]
name = "phase6_integration_test"
path = "src/bin/phase6_integration_test.rs"

[[bin]]
name = "phase7_vector_benchmark"
path = "src/bin/phase7_vector_benchmark.rs"

[[bin]]
name = "phase7_memory_benchmark"
path = "src/bin/phase7_memory_benchmark.rs"

[[bin]]
name = "phase7_query_optimization_benchmark"
path = "src/bin/phase7_query_optimization_benchmark.rs"

[[bin]]
name = "test_simple_query"
path = "src/bin/test_simple_query.rs"

[[bin]]
name = "test_sum_avg"
path = "src/bin/test_sum_avg.rs"

[[bin]]
name = "test_full_llm_pipeline"
path = "src/bin/test_full_llm_pipeline.rs"

[[bin]]
name = "test_complex_query"
path = "src/bin/test_complex_query.rs"

[[bin]]
name = "test_extensive"
path = "src/bin/test_extensive.rs"

[[bin]]
name = "test_70_percent"
path = "src/bin/test_70_percent.rs"

[[bin]]
name = "test_easy_medium_sql"
path = "src/bin/test_easy_medium_sql.rs"

[[bin]]
name = "test_phase1_worldstate"
path = "src/bin/test_phase1_worldstate.rs"

[[bin]]
name = "test_phase2_ingestion"
path = "src/bin/test_phase2_ingestion.rs"

[[bin]]
name = "test_phase3_join_rules"
path = "src/bin/test_phase3_join_rules.rs"

[[bin]]
name = "test_phase5_llm_cortex"
path = "src/bin/test_phase5_llm_cortex.rs"

[[bin]]
name = "test_phase5_full_pipeline"
path = "src/bin/test_phase5_full_pipeline.rs"


# Removed binary targets for non-existent test files
# [[bin]]
# name = "verify_features"
# path = "verify_features.rs"

# [[bin]]
# name = "test_join_minimal"
# path = "test_join_minimal.rs"

# [[bin]]
# name = "test_join_simple"
# path = "test_join_simple.rs"

# [[bin]]
# name = "test_join_demo"
# path = "test_join_demo.rs"

# [[bin]]
# name = "test_multi_join"
# path = "test_multi_join.rs"

# [[bin]]
# name = "test_complex_query"
# path = "test_complex_query.rs"

# [[bin]]
# name = "test_complex_queries_suite"
# path = "test_complex_queries_suite.rs"

# Temporarily disabled - uses old APIs
# [[bin]]
# name = "test_query4"
# path = "test_query4.rs"

# [[bin]]
# name = "test_query4_standalone"
# path = "test_query4_standalone.rs"

[[example]]
name = "basic_usage"
path = "examples/basic_usage.rs"

